# TriadicSqlDb

./: Cargo.toml  README.md  Student.json  Syskeywords.json  key.txt  package-lock.json  userdata
AllUserData/: ali.json  bb.json  tt.json
AllUserData/admintest/: .json  UCP.json
AllUserData/jawadali/: ALI.json  nomi1.json
AllUserData/waleedzafar/: ALI.json  UCP.json  yes.json
App/: Cargo.toml
TestingRequest/: for_create.http  for_rename.http  healthcheck.http  user.http
TestingRequest/DDL_query/: query.http  table.http
TestingRequest/user_related/: account_created.http  login.http
UserAuth/: Cargo.toml
UserAuth/src/structure_of_server/: appuser_fn.rs  tfile_fn.rs  user_fn.rs
app/: Cargo.toml
app/src/: main.rs
common_structure/: Cargo.toml
common_structure/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: lexical.rs  lib.rs  syntax.rs
compiler/src/syntax/: alter_parse.rs  connect.rs  create_parse.rs  delete_parse.rs  drop_parse.rs  insert_parse.rs  parse.rs  rename_parse.rs  search_parse.rs  select_parse.rs  show_parse.rs  truncate_parse.rs  update_parse.rs  use_parse.rs
compiler/src/syntax/create_parse/: constraints.rs  helping.rs
compiler/src/syntax/create_parse/constraints/: parse_constraint.rs
server/src/: lib.rs
storagecontroller/: Cargo.toml
storagecontroller/src/: ddl.rs  dml.rs  filing.rs  helping.rs  lib.rs
storge/: Cargo.toml
storge/src/: column.rs  lib.rs  table.rs
triadic_error/: Cargo.toml
triadic_error/src/: engine_error.rs  lib.rs
triadic_logic/: Cargo.toml
triadic_logic/src/: datatype.rs  degree.rs  lib.rs  tri_var.rs
user_auth/: Cargo.toml
user_auth/src/: lib.rs
user_auth/src/structure_of_server/: appuser_fn.rs  mod.rs  user_fn.rs
web_app/practice_things/: package-lock.json  package.json
web_app/practice_things/src/: App.css  App.jsx  index.css
web_app/practice_things/src/compo/: Mybtn.jsx  custab.jsx  draw.jsx
web_app/react-app/: index.html  package-lock.json  package.json
web_app/react-app/src/: App.css  App.jsx  EditorPage.jsx  HelpPage.jsx  ResultPage.jsx  Route.jsx  chaecker.jsx  editor.jsx  index.css  navi.jsx
web_server/: Cargo.toml
web_server/src/: main.rs
