[package]
name = "app"
version = "0.1.0"
edition = "2021"


[dependencies]
compiler = { version = "0.1.0", path = "../compiler" }
server = { version = "0.1.0", path = "../server" }
storagecontroller = { version = "0.1.0", path = "../storagecontroller" }
storge = { version = "0.1.0", path = "../storge" }
triadic_error = { version = "0.1.0", path = "../triadic_error" }
triadic_logic = { version = "0.1.0", path = "../triadic_logic" }
