[package]
name = "compiler"
version = "0.1.0"
edition = "2021"


[dependencies]
storagecontroller = { version = "0.1.0", path = "../storagecontroller" }
storge = { version = "0.1.0", path = "../storge" }
triadic_error = { version = "0.1.0", path = "../triadic_error" }
triadic_logic = { version = "0.1.0", path = "../triadic_logic" }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
common_structure = { version = "0.1.0", path = "../common_structure" }
