[package]
name = "storagecontroller"
version = "0.1.0"
edition = "2021"


[dependencies]
storge = { version = "0.1.0", path = "../storge" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
triadic_logic = { version = "0.1.0", path = "../triadic_logic" }
triadic_error = { version = "0.1.0", path = "../triadic_error" }
common_structure = { version = "0.1.0", path = "../common_structure" }

