[package]
name = "storge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
triadic_logic = { version = "0.1.0", path = "../triadic_logic" }
serde = { version="1.0.197" ,features = ["derive","default"]}
serde_json = { version="1.0.114" ,features = ["default"]}
avl = { version="0.7.1" ,features = ["consistency_check"]}
