[package]
name = "web_server"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-cors = { version = "0.7.0",features = ["draft-private-network-access"] }
actix-web = { version = "4.5.1",features = ["default"] }
compiler = { version = "0.1.0", path = "../compiler" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
storagecontroller = { version = "0.1.0", path = "../storagecontroller" }
triadic_error = { version = "0.1.0", path = "../triadic_error" }
actix-web-actors="3"
actix = "0.10.0"
user_auth = { version = "0.1.0", path = "../user_auth" }
dotenv = "0.15.0"
sha2 = "0.10.8"
actix-files = "0.6.6"
zip = "0.6"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3"